haskell/katari-compiler/test/golden/expected/04-handle-block.diagnostics.txt
error[K0220]: type contradiction at ReasonKindRequestHandlerNever: expected `SemanticTypeLiteralInteger 42`, found `SemanticTypeNever`
  --> test/golden/cases/04-handle-block.ktr (7:5)
  |
7 |     req fetch_answer() { 42 }
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
